# telegramMimiApp-MaterialUi

./: .gitignore  README  package-lock.json  package.json
backend/: Cargo.toml
backend/migrations/: 20250627213831_items.sql  20250630145416_lessons.sql
backend/src/: app.rs  db.rs  error.rs  main.rs
backend/src/modules/: mod.rs
backend/src/modules/textbooks/: entity.rs  handlers.rs  mod.rs  model.rs  repository.rs  routes.rs  service.rs
backend/src/modules/textbooks/dto/: input.rs  mod.rs  output.rs
frontend/src/: App.jsx  main.jsx
frontend/src/app/: MainLayout.jsx
frontend/src/features/lessons/: LessonCard.jsx
frontend/src/features/lessons/sections/: ExpandableSection.jsx
frontend/src/pages/: FavoritePage.jsx  HomePage.jsx  LessonPage.jsx
frontend/src/shared/theme/: global.css
src/: App.jsx  MainLayout .jsx  main.jsx  theme.js
src/components/: ExpandableBar.jsx  ExpandableSection.jsx  NavBar.jsx  Search.jsx
src/components/Header/: Header.jsx
src/components/LessonCard/: AchievementCard.jsx  CurseCarcd.jsx  LessonCard.jsx
src/components/ProgressCard/: ProgressCard.jsx
src/components/Section/: ExpandleSection.jsx  LessonScrollSection.jsx
src/features/lessons/: CurseCard.jsx  HeaderForLessonPage.jsx
src/features/lessons/sections/: CurseCardSection.jsx  LessonScrollSection.jsx
src/features/progress/: AchievementCard.jsx  ProgressCard.jsx
src/pages/: HomePage.jsx  LearnPage.jsx  LessonListPage.jsx  LessonPage.jsx
src/shared/theme/: theme.js
src/shared/ui/: Header.jsx
